[package]
name = "obs-bilibili"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0"
anyhow = "1.0"
config = { version = "0.11", default-features = false, features = ["toml"] }
bili = { git = "https://github.com/virtio-project/bili.git" }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["rt-multi-thread"] }

[features]
default = []
